--- a/main.css
+++ b/main.css
@@ -11,8 +11,8 @@ body {
   line-height: 1.3;
 }
 h1, h2 {
-  font-size: 36px;
-  line-height: 44px;
+  font-size: 1.5em;
+  line-height: 1.3;
 }
 @media only screen and (max-width: 600px)
 {
