--- a/main.css
+++ b/main.css
@@ -1,18 +1,47 @@
-@media only screen and (min-width: 600px) and (min-width: 900px)
-{
+
 :root {
-  font-size: 1.4m;
+  font-size: 1.2m;
   line-height: 1.3;
   font-family:-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans,Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  color: green;
 }
+html * {
+
+    box-sizing: border-box;
+}
+
+[menu] ul {
+    display: flex;
+    justify-content: space-between;
+    margin: 0;
+    padding: 0;
+    flex-wrap: wrap;
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+}
+
 body {
-  font-family: 'Ubuntu', sans-serif;
-  font-size: 1.4em;
-  line-height: 1.3;
+    margin: 0;
 }
-h1, h2 {
-  font-size: 1.5em;
-  line-height: 1.3;
+.chapter {
+    background-image: url('prideandpred.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
+
+h1 {
+  font-size: 2.1em;
+  line-height: 1.6;
+  font-family: 'Ubuntu Mono', ;
+  margin: 0;
+}
+h2 {
+  font-size: 1.3em;
+  line-height: 1.5;
+  font-family: 'Ubuntu Mono', ;
+  margin: 0;
 }
 @media only screen and (max-width: 600px)
 {
@@ -23,5 +52,4 @@ h1, h2 {
 {
 .chapter {
   width: 50vw;
-}
 }
